# CoachSpark

./: .gitignore  README.md  concept.md  package-lock.json  sub.md
backend/: .env.example  Dockerfile  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  reset_db.py  seed_data.py  seed_practice_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_migrate_closed_to_rejected.py  002_add_resume_table.py  003_add_indexes.py  003_add_persona_v2_tables.py  004_add_vector_column.py
backend/app/: config.py  main.py
backend/app/ai/: json_utils.py  llm.py
backend/app/ai/graphs/: match_graph.py  prep_graph.py  review_graph.py
backend/app/ai/prompts/: match.py  prep.py  review.py
backend/app/api/v1/: __init__.py  companies.py  company_brief.py  dashboard.py  interviews.py  (+7 more)
backend/app/core/: config.py  logging.py  skill_mapping.py
backend/app/db/: models.py  repository.py  session.py
backend/app/models/: company.py
backend/app/services/: company_service.py  context_builder.py  insight_service.py  match_service.py  persona_v2_service.py  practice_service.py  prep_service.py  profile_service.py  push_service.py  rag_retrieval_service.py  review_service.py  status_service.py
backend/coachspark_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: backfill_persona_v2.py  bge-test.py  latency_probe.py  test_review_speed.py  verify_and_reembed_evidence.py
backend/tests/: conftest.py  test_backend.py  test_companies.py  test_dashboard.py  test_insight_service.py  test_prep_service.py  test_validation.py
(+39 files in other folders)
