[project]
name = "coachspark-backend"
version = "0.1.0"
description = "AI-Powered Interview Preparation Coach - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "langgraph==0.2.60",
    "langchain==0.3.14",
    "langchain-openai==0.3.0",
    "openai==1.59.3",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8080
reload = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
